# claude-perf

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json
agents/: perf-agent-bundle.md  perf-agent-cwv.md  perf-agent-mobile.md  perf-agent-network.md  perf-agent-render.md  perf-agent-reporter.md  perf-agent-third-party.md
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALLATION.md  MCP-INTEGRATION.md  TROUBLESHOOTING.md
extensions/crux/: README.md  install.sh
extensions/pagespeed/: README.md  install.sh
extensions/webpagetest/: README.md  install.sh
hooks/: on-build-complete.sh  on-deploy.sh
perf/: SKILL.md
schema/: perf-budgets.json
skills/perf-accessibility/: SKILL.md
skills/perf-bundle/: SKILL.md
skills/perf-caching/: SKILL.md
skills/perf-cwv/: SKILL.md
skills/perf-fonts/: SKILL.md
skills/perf-images/: SKILL.md
skills/perf-mobile/: SKILL.md
skills/perf-monitor/: SKILL.md
skills/perf-network/: SKILL.md
skills/perf-plan/: SKILL.md
skills/perf-render/: SKILL.md
skills/perf-ssr/: SKILL.md
skills/perf-third-party/: SKILL.md
