[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-perf"
version = "0.1.0"
description = "Web performance engineering skill for Claude Code: Core Web Vitals, bundle analysis, rendering, caching, RUM, and CI budgets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "claude-perf contributors" }
]
keywords = [
    "claude-code",
    "performance",
    "core-web-vitals",
    "lighthouse",
    "web-performance",
    "rum",
    "cwv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "playwright>=1.44",
    "tldextract>=5.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/kartik-git/claude-perf"
Repository = "https://github.com/kartik-git/claude-perf"
Issues = "https://github.com/kartik-git/claude-perf/issues"
Changelog = "https://github.com/kartik-git/claude-perf/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
